C++/vrcc.h


VRCC_API int VRCC_Start(int argc, char* argv[]);
VRCC_API const char* Voisus_LogPath();
VRCC_API const char* Voisus_ClientBuildVersion();
VRCC_API const char* Voisus_ClientMsgVersion();
VRCC_API const char* Voisus_ClientMsgDate();
VRCC_API const char* Voisus_ServerBuildVersion();
VRCC_API const char* Voisus_ServerMsgVersion();
VRCC_API const char* Voisus_ServerMsgDate();
VRCC_API const char* Network_TargetIP();
VRCC_API const char* Network_ClientIP();
VRCC_API const char* Network_ClientName();
VRCC_API const char* Network_OperatorId();
VRCC_API const char* Role_Name(int list_index);
VRCC_API const char* Role_Id(int list_index);
VRCC_API const char* Role_NameActive();
VRCC_API const char* Role_IdActive();
VRCC_API const char* Role_NameSet();
VRCC_API const char* Role_IdSet();
VRCC_API const char* EntityState_Name(int list_index);
VRCC_API const char* EntityState_Id(int list_index);
VRCC_API const char* EntityState_NameActive();
VRCC_API const char* EntityState_IdActive();
VRCC_API const char* EntityState_NameSet();
VRCC_API const char* EntityState_IdSet();
VRCC_API const char* Radio_NetName(int radio_index, int net_index);
VRCC_API const char* Radio_NetNameActive(int radio_index);
VRCC_API const char* Radio_NetID(int radio_index, int net_index);
VRCC_API const char * Radio_NetWaveform(int radio_index, int net_index);
VRCC_API const char* Radio_NetIDActive(int radio_index);
VRCC_API const char* Radio_Type(int radio_index);
VRCC_API const char* Joystick_Name(int list_index);
VRCC_API void Call_GetLock();
VRCC_API void Call_ReleaseLock();
VRCC_API void Call_Invite(const char* call_id, const char* endpoint_id);
VRCC_API const char* Call_IDFirst();
VRCC_API const char* Call_IDNext();
VRCC_API int Call_ListCount();
VRCC_API int Call_Endpoint_Version();
VRCC_API const char* Call_Endpoint_IDFirst(const char* call_id);
VRCC_API int Call_Endpoint_State(const char* call_id, const char* ep_id);
VRCC_API int Call_Invitation_Version();
VRCC_API int Call_Invitation_First(CallInvitation_t* invite);
VRCC_API int Call_Invitation_Next(CallInvitation_t* invite);
VRCC_API void Call_Invitation_ClearAll();
VRCC_API void Call_Progress(const char* call_id, int call_state);
VRCC_API void Call_Leave(const char* call_id, int leave_reason);
VRCC_API int Phone_ListCount();
VRCC_API float Phone_Volume();
VRCC_API void Phone_SetCall(const char* call_id);
VRCC_API void Phone_SetVolume(float volume);
VRCC_API void Voisus_ConnectCloud(const char* cloud_id);
VRCC_API void Cloud_GetLock();
VRCC_API void Cloud_ReleaseLock();
VRCC_API int Cloud_ListCount();
VRCC_API int Cloud_GetServerCount(const char* uuid);
VRCC_API int Cloud_Version();
VRCC_API void Operator_GetLock();
VRCC_API void Operator_ReleaseLock();
VRCC_API int Operator_ListCount();
VRCC_API int Operator_Version();
VRCC_API int RadCtrl_ListCount();
VRCC_API void RadCtrl_Poll(const char* name);
VRCC_API int RadCtrl_GetValueInt(const char* name, const char* setting);
VRCC_API void RadCtrl_SetValueStr(const char* name, const char* setting, const char* value);
VRCC_API void RadCtrl_SetValueInt(const char* name, const char* setting, int value);
VRCC_API int RadCtrl_ErrorVersion();
VRCC_API void DIS_SetParams(DISParams_t* dis_params);
VRCC_API void DIS_GetParams(DISParams_t* dis_params);