C#/VoisusCS/VRCC.cs

        
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Call_GetLock();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Call_ReleaseLock();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Call_ListCount();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Call_Endpoint_Version();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Call_Invitation_ClearAll();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Call_Invite ([MarshalAs(UnmanagedType.LPStr)] String call_id, [MarshalAs(UnmanagedType.LPStr)] String endpoint_id);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static CallProgress_t Call_Endpoint_State([MarshalAs(UnmanagedType.LPStr)] String call_id, [MarshalAs(UnmanagedType.LPStr)] String ep_id);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Call_Invitation_Version();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Call_Invitation_First([MarshalAs(UnmanagedType.LPStruct)] CallInvitation_t invite);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Call_Invitation_Next([MarshalAs(UnmanagedType.LPStruct)] CallInvitation_t invite);
        
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Call_Progress([MarshalAs(UnmanagedType.LPStr)] String call_id, CallProgress_t call_state);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Call_Leave([MarshalAs(UnmanagedType.LPStr)] String call_id, CallLeave_t leave_reason);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Phone_ListCount();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static float Phone_Volume();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Phone_SetVolume(float volume);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Phone_SetCall([MarshalAs(UnmanagedType.LPStr)] String call_id);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Voisus_ConnectCloud([MarshalAs(UnmanagedType.LPStr)] String cloud_id);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Cloud_GetLock();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Cloud_ReleaseLock();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Cloud_ListCount();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Cloud_Version();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Cloud_GetServerCount([MarshalAs(UnmanagedType.LPStr)] String uuid);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Operator_GetLock();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Operator_ReleaseLock();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Operator_ListCount();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Operator_Version();

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int RadCtrl_ListCount();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int RadCtrl_ErrorVersion();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void RadCtrl_Poll([MarshalAs(UnmanagedType.LPStr)] String name);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int RadCtrl_GetValueInt ([MarshalAs(UnmanagedType.LPStr)] String name, [MarshalAs(UnmanagedType.LPStr)] String setting);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void RadCtrl_SetValueStr ([MarshalAs(UnmanagedType.LPStr)] String name, [MarshalAs(UnmanagedType.LPStr)] String setting, [MarshalAs(UnmanagedType.LPStr)] String value);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void RadCtrl_SetValueInt ([MarshalAs(UnmanagedType.LPStr)] String name, [MarshalAs(UnmanagedType.LPStr)] String setting, int value);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void DIS_SetParams ([MarshalAs(UnmanagedType.LPStruct)] DISParams_t dis_params);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void DIS_GetParams ([MarshalAs(UnmanagedType.LPStruct)] DISParams_t dis_params);

        #endregion public

        #region redefinitions
        /* Safe public alternatives to the unsafe private functions */

        public static void VRCC_Start()
        {
            IntPtr argv = IntPtr.Zero;
            if (VRCC_Start(0, ref argv) == 0)
                throw new VRCCException("VoisusMain.exe failed to start - verify that it's been installed correctly.");
        }

        public static String Voisus_LogPath()
        {
            unsafe { return new String(Voisus_LogPath_Unsafe()); }
        }

        public static String Voisus_ClientBuildVersion()
        {
            unsafe { return new String(Voisus_ClientBuildVersion_Unsafe()); }
        }

        public static String Voisus_ClientMsgVersion()
        {
        unsafe { return new String(Voisus_ClientMsgVersion_Unsafe()); }
        }

        public static String Voisus_ClientMsgDate()
        {
        unsafe { return new String(Voisus_ClientMsgDate_Unsafe()); }
        }

        public static String Voisus_ServerBuildVersion()
        {
        unsafe { return new String(Voisus_ServerBuildVersion_Unsafe()); }
        }

        public static String Voisus_ServerMsgVersion()
        {
        unsafe { return new String(Voisus_ServerMsgVersion_Unsafe()); }
        }

        public static String Voisus_ServerMsgDate()
        {
            unsafe { return new String(Voisus_ServerMsgDate_Unsafe()); }
        }

        public static String Network_ClientIP()
        {
            unsafe { return new String(Network_ClientIP_Unsafe()); }
        }

        public static String Network_ClientName()
        {
            unsafe { return new String(Network_ClientName_Unsafe()); }
        }

        public static String Network_OperatorId()
        {
            unsafe { return new String(Network_OperatorId_Unsafe()); }
        }

        public static String Network_TargetIP()
        {
            unsafe { return new String(Network_TargetIP_Unsafe()); }
        }

        public static String Role_Name(int list_index)
        {
            unsafe { return new String(Role_Name_Unsafe(list_index)); }
        }
  
        public static String Role_Id(int list_index)
        {
            unsafe { return new String(Role_Id_Unsafe(list_index)); }
        }
    
        public static String Role_NameActive()
        {
            unsafe { return new String(Role_NameActive_Unsafe()); }
        }
      
        public static String Role_IdActive()
        {
            unsafe { return new String(Role_IdActive_Unsafe()); }
        }
       
        public static String Role_NameSet()
        {
            unsafe { return new String(Role_NameSet_Unsafe()); }
        }
       
        public static String Role_IdSet()
        {
            unsafe { return new String(Role_IdSet_Unsafe()); }
        }
        
        public static String EntityState_Id(int list_index)
        {
            unsafe { return new String(EntityState_Id_Unsafe(list_index)); }
        }
       
        public static String EntityState_Name(int list_index)
        {
            unsafe { return new String(EntityState_Name_Unsafe(list_index)); }
        }

        public static String EntityState_NameActive()
        {
            unsafe { return new String(EntityState_NameActive_Unsafe()); }
        }
       
        public static String EntityState_IdActive()  
        {
            unsafe { return new String(EntityState_IdActive_Unsafe()); }
        }
        
        public static String  EntityState_NameSet() 
        {
            unsafe { return new String(EntityState_NameSet_Unsafe()); }
        }

        public static String EntityState_IdSet()            
        {
            unsafe { return new String(EntityState_IdSet_Unsafe()); }
        }

        public static String Radio_NetName (int radio_index, int net_index)
        {
            unsafe { return new String(Radio_NetName_Unsafe(radio_index, net_index)); }
        }

        public static String Radio_NetNameActive (int radio_index)
        {
            unsafe { return new String(Radio_NetNameActive_Unsafe(radio_index)); }
        }

        public static String Radio_NetID (int radio_index, int net_index)
        {
            unsafe { return new String(Radio_NetID_Unsafe(radio_index, net_index)); }
        }

        public static String  Radio_NetWaveform (int radio_index, int net_index)
        {
            unsafe { return new String(Radio_NetWaveform_Unsafe(radio_index, net_index));}
        }

        public static String Radio_NetIDActive (int radio_index)
        {
            unsafe { return new String(Radio_NetIDActive_Unsafe(radio_index)); }
        }

        public static String Radio_Type (int radio_index)
        {
            unsafe { return new String(Radio_Type_Unsafe(radio_index)); }
        }

        public static String Joystick_Name(int list_index)
        {
            unsafe { return new String(Joystick_Name_Unsafe(list_index)); }
        }

        public static String Call_IDFirst()        
        {
            unsafe { return new String(Call_IDFirst_Unsafe()); }
        }

        public static String Call_IDNext()       
        {
            unsafe { return new String(Call_IDNext_Unsafe()); }
        }

        public static String Call_Endpoint_IDFirst(String call_id)        
        {
            unsafe { return new String(Call_Endpoint_IDFirst_Unsafe(call_id)); }
        }
